syntax="proto3";

package storehouse_service;
option go_package="genproto/storehouse_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service BranchService {
    rpc CreateBranch(CreateBranchRequest) returns (Branch) {}
    rpc GetByIDBranch(BranchPrimaryKey) returns (Branch) {}
    rpc GetListBranch(GetListBranchRequest) returns (GetListBranchResponse) {}
    rpc UpdateBranch(UpdateBranchRequest) returns (Branch) {}
    rpc UpdatePatchBranch(UpdatePatchBranchRequest) returns (Branch) {}
    rpc DeleteBranch(BranchPrimaryKey) returns (google.protobuf.Empty) {}
}

message BranchPrimaryKey {
    string id = 1;
}

message Branch {
    string id = 1;
    string name = 2;
    string phone_number = 3;
    string address = 4;
    string status = 5;
    string created_at = 6;
    string updated_at = 7;
}

message CreateBranchRequest {
    string name = 1;
    string phone_number = 2;
    string address = 3;
    string status = 4;
}

message UpdateBranchRequest {
    string id = 1;
    string name = 2;
    string phone_number = 3;
    string address = 4;
    string status = 5;
}

message UpdatePatchBranchRequest {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message GetListBranchRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetListBranchResponse {
    int32 count = 1;
    repeated Branch branchs = 2;
}
