syntax="proto3";

package storehouse_service;
option go_package="genproto/storehouse_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service RequestService {
    rpc CreateRequest(CreateRequestRequest) returns (Request) {}
    rpc GetByIDRequest(RequestPrimaryKey) returns (Request) {}
    rpc GetListRequest(GetListRequestRequest) returns (GetListRequestResponse) {}
    rpc UpdateRequest(UpdateRequestRequest) returns (Request) {}
    rpc UpdatePatchRequest(UpdatePatchRequestRequest) returns (Request) {}
    rpc DeleteRequest(RequestPrimaryKey) returns (google.protobuf.Empty) {}
}

message RequestPrimaryKey {
    string id = 1;
}

message Request {
    string id = 1;
    string date_time = 2;
    string description = 3;
    string comments = 4;
    string user_id = 5;
    string user_id_2 = 6;
    string branch_id = 7;
    string status = 8;
    string chapter_status = 9;
    string created_at = 10;
    string updated_at = 11;
}

message CreateRequestRequest {
    string date_time = 1;
    string description = 2;
    string comments = 3;
    string user_id = 4;
    string user_id_2 = 5;
    string branch_id = 6;
    string status = 7;
    string chapter_status = 8;
}

message UpdateRequestRequest {
    string id = 1;
    string date_time = 2;
    string description = 3;
    string comments = 4;
    string user_id = 5;
    string user_id_2 = 6;
    string branch_id = 7;
    string status = 8;
    string chapter_status = 9;
}

message UpdatePatchRequestRequest {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message GetListRequestRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetListRequestResponse {
    int32 count = 1;
    repeated Request requests = 2;
}
